Add styles of sitenav toggler

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
   elSiteHeaderToggler.addEventListener('click', function () {
     elSiteHeader.classList.toggle('sitenav--open');
+    elSiteHeaderToggler.classList.toggle('sitenav__toggler--changer')
   });
 </script>
 
