--- a/index.html
+++ b/index.html
@@ -34,11 +34,27 @@
         </ul>
       </nav>
       <div class="easybank-header__buttons">
-        <a class="button easybank-header__button" href="#">Request Invite</a>
+        <a class="button easybank-header__button" href="#">Request invite</a>
         <button class="sitenav__toggler" type="button"></button>
       </div>
     </div>
   </header>
+
+  <main class="easybank-main">
+    <div class="container">
+      <h1 class="visually-hidden">Easybank</h1>
+      <section class="digitalbank">
+        <div class="digitalbank__content">
+          <h2 class="digitalbank__content-heading">Next generation digital banking</h2>
+          <p class="digitalbank__content-text">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
+          <a class="button" href="#">Request invite</a>
+        </div>
+        <picture>
+          <img class="digitalbank__img" src="img/image-mockups.png" alt="Group of mobile phones" srcset="img/image-mockups.png 1x, img/image-mockups@2x.png 2x" width="732" height="901">
+        </picture>
+      </section>
+    </div>
+  </main>
 </body>
 
 <script>
