Add easybank header part

--- a/index.html
+++ b/index.html
@@ -8,7 +8,33 @@
 </head>
 
 <body>
-
+  <header class="easybank-header">
+    <div class="container easybank-header__container">
+      <a class="easybank-header__logo" href="index.html">
+        <img src="img/logo.svg" alt="Easybank logo" width="139" height="20">
+      </a>
+      <nav class="sitenav easybank-header__sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Home</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">About</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Contact</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Blog</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">Careers</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="button easybank-header__btn" href="#">Request Invite</a>
+    </div>
+  </header>
 </body>
 
 </html>
