--- a/index.html
+++ b/index.html
@@ -41,32 +41,57 @@
   </header>
 
   <main class="easybank-main">
-    <div class="container">
-      <h1 class="visually-hidden">Easybank</h1>
-      <section class="digitalbank">
+    <h1 class="visually-hidden">Easybank</h1>
+    <section class="digitalbank">
+      <div class="container">
         <div class="digitalbank__content">
           <h2 class="digitalbank__content-heading">Next generation digital banking</h2>
           <p class="digitalbank__content-text">Take your financial life online. Your Easybank account will be a
             one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
-          <a class="button" href="#">Request invite</a>
-        </div>
-        <picture>
-          <img class="digitalbank__img" src="img/image-mockups.png" alt="Group of mobile phones"
+            <a class="button" href="#">Request invite</a>
+          </div>
+          <picture>
+            <img class="digitalbank__img" src="img/image-mockups.png" alt="Group of mobile phones"
             srcset="img/image-mockups.png 1x, img/image-mockups@2x.png 2x" width="732" height="901">
-        </picture>
+          </picture>
+        </div>
       </section>
-    </div>
-  </main>
-</body>
 
-<script>
-  var elSiteHeader = document.querySelector('.sitenav');
-  var elSiteHeaderToggler = document.querySelector('.sitenav__toggler');
+      <section class="features">
+        <div class="container features__container">
+          <h2 class="features__heading">Why choose Easybank?</h2>
+          <p class="features__text">We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
+          <ul class="features__list">
+            <li class="feature features__item">
+              <h3 class="feature__heading">Online Banking</h3>
+              <p class="feature__text">Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
+            </li>
+            <li class="feature features__item">
+              <h3 class="feature__heading">Simple Budgeting</h3>
+              <p class="feature__text">See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
+            </li>
+            <li class="feature features__item">
+              <h3 class="feature__heading">Fast Onboarding</h3>
+              <p class="feature__text">We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
+            </li>
+            <li class="feature features__item">
+              <h3 class="feature__heading">Open API</h3>
+              <p class="feature__text">Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+  </body>
 
-  elSiteHeaderToggler.addEventListener('click', function () {
-    elSiteHeader.classList.toggle('sitenav--open');
-    elSiteHeaderToggler.classList.toggle('sitenav__toggler--changer')
-  });
-</script>
+  <script>
+    var elSiteHeader = document.querySelector('.sitenav');
+    var elSiteHeaderToggler = document.querySelector('.sitenav__toggler');
 
-</html>
+    elSiteHeaderToggler.addEventListener('click', function () {
+      elSiteHeader.classList.toggle('sitenav--open');
+      elSiteHeaderToggler.classList.toggle('sitenav__toggler--changer')
+    });
+  </script>
+
+  </html>
