Add articles section and styles

--- a/index.html
+++ b/index.html
@@ -81,6 +81,50 @@
           </ul>
         </div>
       </section>
+
+      <section class="articles">
+        <div class="container">
+          <h2 class="articles__heading">Latest articles</h2>
+          <ul class="articles__list">
+            <li class="articles__item article">
+              <div class="article__content">
+                <p class="article__owner">By Claire Robinson</p>
+                <h3 class="article__heading">
+                  <a class="article__heading-link" href="#">Receive money in any currency with no fees</a>
+                </h3>
+                <p class="article__text">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+              </div>
+            </li>
+            <li class="articles__item article">
+              <div class="article__content">
+                <p class="article__owner">By Wilson Hutton</p>
+                <h3 class="article__heading">
+                  <a class="article__heading-link" href="#">Treat yourself without worrying about money</a>
+                </h3>
+                <p class="article__text">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+              </div>
+            </li>
+            <li class="articles__item article">
+              <div class="article__content">
+                <p class="article__owner">By Wilson Hutton</p>
+                <h3 class="article__heading">
+                  <a class="article__heading-link" href="#">Take your Easybank card wherever you go</a>
+                </h3>
+                <p class="article__text">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+              </div>
+            </li>
+            <li class="articles__item article">
+              <div class="article__content">
+                <p class="article__owner">By Claire Robinson</p>
+                <h3 class="article__heading">
+                  <a class="article__heading-link" href="#">Our invite-only Beta accounts are now live!</a>
+                </h3>
+                <p class="article__text">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 
