Add media to the footer

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       </ul>
 
       <div class="easybank-footer__button-copyrights">
-        <a class="button easybank-footer__button" href="#">Request invite</a>
+        <a class="easybank-footer__button button" href="#">Request invite</a>
         <div class="easybank-footer__copyright">&copy; Easybank. All rights reserved</div>
       </div>
     </div>
