Add button wrapper and its styles

--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
       </ul>
 
       <div class="easybank-footer__button-copyrights">
-        <a class="easybank-footer__button button" href="#">Request invite</a>
+        <div class="easybank-footer__button-wrapper">
+          <a class="easybank-footer__button button" href="#">Request invite</a>
+        </div>
         <div class="easybank-footer__copyright">&copy; Easybank. All rights reserved</div>
       </div>
     </div>
